2 blocks and js next animation

--- a/index.html
+++ b/index.html
@@ -345,6 +345,200 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="content block-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12 text-center">
+						<h2>Помогаем клиентам достичь результатов</h2>
+						<img src="assets/img/pacman.gif" class="full-width" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="content block-6">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12 text-center">
+						<h2>Как мы это делаем?</h2>
+						<img src="assets/img/block-6-item-1.jpg" class="full-width" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--team-->
+		<section class="content block-7">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12 text-center">
+						<h2>Наша команда</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-md-4 col-sm-4">
+						<div class="item">
+							<div class="item-holder">
+								<img src="assets/img/folio/item-1.jpg" class="full-width" alt="">
+								<div class="item-inner">
+									<div class="item-inner-holder">
+										<div>
+											<h4>Аня, дизайнер</h4>
+											<p>Любит котов. Училась на бухгалтера. Не попёрло. Лучше всех разбирается в интраокулярных линзах и спаянных сетках.</p>
+										</div>
+										<div></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section><!--team END-->
+		<!--partners-->
+		<section class="content block-8">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12 text-center">
+						<h2>Нам доверяют</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+					<div class="col-xs-12 col-md-3 col-sm-3">
+						<img src="assets/img/partners/item-1.jpg" class="full-width" alt="">
+					</div>
+				</div>
+			</div>
+		</section><!--partners-->
+
 	</div>
 	
 	<section class="footer">
