--- a/index.html
+++ b/index.html
@@ -117,54 +117,57 @@
 						<div class="col-xs-6 col-md-2 col-sm-2">
 							<a href="#block1" class="smooth logo">
 								<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-									 viewBox="0 0 141.2 48.7" style="enable-background:new 0 0 141.2 48.7;" xml:space="preserve">
-								<path class="st0" d="M2.9,27.8c0,0-2.5-8-2.4-10.6c0.1-1.7,0.3-5.1,4.5-7.7c2.7-1.6,7.6-2.2,10.2-2.7c3.5-0.6,10.2-1.2,13.5-2.1
-									c4.1-1,6.2-3.8,6.2-3.8s-0.4,2.9-2.5,4c-5,2.6-10.4,2-16,2.8c-7.2,1-11.9,2.9-13.6,5.8C2.2,14.7,2,16.6,2,18.7c0,3.5,0.7,7.5,1,9
-									C3,27.7,2.9,27.7,2.9,27.8L2.9,27.8z"/>
-								<polygon class="st0" points="33.2,48.3 5.9,48.3 6.7,43.7 31.8,43.7 "/>
-								<path class="st0" d="M32.4,44.8L19,45.4L5.5,44.8c-2.6,0-4.7-2.1-4.7-4.7l4.6-24.3c0-2.6,2.5-3.9,5.1-3.9h18.8
-									c2.6,0,3.7,2.1,3.7,4.7l4,23.5C37.1,42.7,34.9,44.8,32.4,44.8z"/>
-								<path class="st1" d="M67,18.5c4.7,0,8.2,1,8.2,6.6c0,5.6-3.5,6.6-8.2,6.6h-8.7V18.5H67L67,18.5z M51.5,11.7c-1.2,0-2.2,1-2.2,2.3
-									v29.8c0,1.2,1,2.3,2.3,2.3H56c1.3,0,2.3-1,2.3-2.3v-5.4h11.5c9.1,0,14.4-4.1,14.4-13.3c0-9.2-5.3-13.3-14.4-13.3H51.5L51.5,11.7z
-									 M95,46c0.8,0,1.5-0.6,1.5-1.5V21.9c0-0.8-0.6-1.5-1.5-1.5h-5.3c-0.8,0-1.5,0.6-1.5,1.5v22.7c0,0.8,0.6,1.5,1.5,1.5H95L95,46z
-									 M88.1,14.9c0,1.7,1,2.7,2.7,2.7h3c1.7,0,2.7-1,2.7-2.7V14c0-1.7-1-2.7-2.7-2.7h-3c-1.7,0-2.7,1-2.7,2.7V14.9L88.1,14.9z
-									 M110.8,21.9c-0.9-1.3-1.9-2.1-3.7-2.1h-5.2c-1.2,0-1.4,1.2-0.7,2.1l7.8,11l-8.3,11c-0.7,0.9-0.4,2.1,0.7,2.1h5.1
-									c1.8,0,2.8-0.8,3.7-2.1l4.6-6.2l4.6,6.2c0.9,1.3,1.9,2.1,3.7,2.1h5.1c1.2,0,1.4-1.2,0.7-2.1l-8.3-11l7.8-11c0.6-0.9,0.4-2.1-0.7-2.1
-									h-5.2c-1.8,0-2.8,0.8-3.7,2.1l-4,6L110.8,21.9L110.8,21.9z M139.8,46c0.8,0,1.5-0.6,1.5-1.5V13.2c0-0.8-0.6-1.5-1.5-1.5h-5.3
-									c-0.8,0-1.5,0.6-1.5,1.5v31.4c0,0.8,0.6,1.5,1.5,1.5H139.8L139.8,46z"/>
+									 viewBox="-226 396.2 141.2 48.7" style="enable-background:new -226 396.2 141.2 48.7;" xml:space="preserve">
+
+								<path class="st0" d="M-222.5,423.8c0,0-2.5-8-2.4-10.6c0.1-1.7,0.3-5.1,4.5-7.7c2.7-1.6,7.6-2.2,10.2-2.7c3.5-0.6,10.2-1.2,13.5-2.1
+									c4.1-1,6.2-3.8,6.2-3.8s-0.4,2.9-2.5,4c-5,2.6-10.4,2-16,2.8c-7.2,1-11.9,2.9-13.6,5.8c-0.7,1.2-0.9,3.1-0.9,5.2c0,3.5,0.7,7.5,1,9
+									C-222.5,423.7-222.5,423.7-222.5,423.8L-222.5,423.8z"/>
+								<polygon class="st1" points="-192.2,444.3 -219.6,444.3 -218.8,439.7 -193.6,439.7 "/>
+								<path class="st1" d="M-193.1,440.8l-13.4,0.7l-13.4-0.7c-2.6,0-4.7-2.1-4.7-4.7l4.6-24.3c0-2.6,2.5-3.9,5.1-3.9h18.8
+									c2.6,0,3.7,2.1,3.7,4.7l4,23.5C-188.4,438.7-190.5,440.8-193.1,440.8z"/>
+								<path class="st2" d="M-158.4,414.5c4.7,0,8.2,1,8.2,6.6c0,5.6-3.5,6.6-8.2,6.6h-8.7v-13.2H-158.4L-158.4,414.5z M-174,407.7
+									c-1.2,0-2.2,1-2.2,2.3v29.8c0,1.2,1,2.3,2.3,2.3h4.5c1.3,0,2.3-1,2.3-2.3v-5.4h11.5c9.1,0,14.4-4.1,14.4-13.3
+									c0-9.2-5.3-13.3-14.4-13.3H-174L-174,407.7z M-130.4,442c0.8,0,1.5-0.6,1.5-1.5v-22.7c0-0.8-0.6-1.5-1.5-1.5h-5.3
+									c-0.8,0-1.5,0.6-1.5,1.5v22.7c0,0.8,0.6,1.5,1.5,1.5H-130.4L-130.4,442z M-137.3,410.9c0,1.7,1,2.7,2.7,2.7h3c1.7,0,2.7-1,2.7-2.7
+									V410c0-1.7-1-2.7-2.7-2.7h-3c-1.7,0-2.7,1-2.7,2.7V410.9L-137.3,410.9z M-114.6,418c-0.9-1.3-1.9-2.1-3.7-2.1h-5.2
+									c-1.2,0-1.4,1.2-0.7,2.1l7.8,11l-8.3,11c-0.7,0.9-0.4,2.1,0.7,2.1h5.1c1.8,0,2.8-0.8,3.7-2.1l4.6-6.2l4.6,6.2
+									c0.9,1.3,1.9,2.1,3.7,2.1h5.1c1.2,0,1.4-1.2,0.7-2.1l-8.3-11l7.8-11c0.6-0.9,0.4-2.1-0.7-2.1h-5.2c-1.8,0-2.8,0.8-3.7,2.1l-4,6
+									L-114.6,418L-114.6,418z M-85.7,442c0.8,0,1.5-0.6,1.5-1.5v-31.4c0-0.8-0.6-1.5-1.5-1.5H-91c-0.8,0-1.5,0.6-1.5,1.5v31.4
+									c0,0.8,0.6,1.5,1.5,1.5H-85.7L-85.7,442z"/>
 								<g>
-									<path class="st2" d="M7.7,45.4L7.7,45.4c-0.1,0-0.3,0-0.4,0C7.4,45.4,7.5,45.4,7.7,45.4z"/>
-									<path class="st2" d="M30,30.8c-0.1,0-0.2,0.2-0.1,0.3c0.1,0.2,0.6,0.8,0.4,0.8c-3.6,1.5-6.4,2-11.6,2.1c-4.5,0.1-6-0.4-10.6-1.4
-										c-0.2,0,0-0.4,0.3-0.5c0.1,0-0.1-0.4-0.3-0.4c-0.9,0.1-1.1,1.6-0.9,2.1c0,0.1,0.4,0.1,0.4,0c0-0.4,0.1-0.8,0.3-0.8
-										c2.8,0.8,5.8,1.6,10.7,1.5c5.3-0.1,10.5-1.4,11.9-2.2c0.2-0.1,0.1,0.6,0.2,0.9c0,0.1,0.4,0.1,0.4,0C31.1,32.4,30.9,31.1,30,30.8z"
-										/>
-									<path class="st2" d="M17.2,39.1c-0.3,0.2,0.7,1.2,0.8,0.9c0.4-0.9,2.9-0.8,2.9-0.8S19.3,38.1,17.2,39.1z"/>
-									<path class="st2" d="M15.8,17.9c0.6-0.4,1.6-0.6,1.6-0.6l0.1-1.7c0,0-1.3,0.3-2.2,0.9c-0.9,0.6-1.2,1.9-1.2,1.9l0.7,0.5
-										C14.7,19,15.3,18.2,15.8,17.9z"/>
-									<path class="st2" d="M22.7,18.8c0.7,0.3,1.3,0.8,1.3,0.8l0.2-0.5c0,0-0.2-0.8-1.1-1.4c-0.6-0.4-1.7-0.6-1.7-0.6l-0.4,1.6
-										C21.1,18.6,22,18.5,22.7,18.8z"/>
-									<path class="st2" d="M16.4,22.4c-0.8,0-1.4,1.1-1.4,2.6c0,1.4,0.6,2.6,1.4,2.6c0.8,0,1.4-1.1,1.4-2.6
-										C17.8,23.5,17.2,22.4,16.4,22.4z M16.2,25.1c-0.3,0-0.6-0.5-0.6-1.1c0-0.6,0.3-1.1,0.6-1.1c0.3,0,0.6,0.5,0.6,1.1
-										C16.8,24.6,16.6,25.1,16.2,25.1z"/>
-									<path class="st2" d="M21.8,27.5c0.8,0,1.4-1.1,1.4-2.6c0-1.4-0.6-2.6-1.4-2.6c-0.8,0-1.4,1.1-1.4,2.6C20.4,26.4,21,27.5,21.8,27.5z
-										 M21.6,22.9c0.3,0,0.6,0.5,0.6,1.1c0,0.6-0.3,1.1-0.6,1.1c-0.3,0-0.6-0.5-0.6-1.1C21,23.4,21.3,22.9,21.6,22.9z"/>
-									<path class="st2" d="M37.4,38.7c-0.3-2.7-2.9-14.3-2.9-14.3s0.9-2.1,1.2-5.7c0.2-2.4-0.5-4.8-0.4-5C39.7,6.3,34.5,0,34.5,0
+									<path class="st3" d="M-217.7,441.4L-217.7,441.4c-0.1,0-0.3,0-0.4,0C-218,441.4-217.9,441.4-217.7,441.4z"/>
+									<path class="st3" d="M-195.5,426.8c-0.1,0-0.2,0.2-0.1,0.3c0.1,0.2,0.6,0.8,0.4,0.8c-3.6,1.5-6.4,2-11.6,2.1
+										c-4.5,0.1-6-0.4-10.6-1.4c-0.2,0,0-0.4,0.3-0.5c0.1,0-0.1-0.4-0.3-0.4c-0.9,0.1-1.1,1.6-0.9,2.1c0,0.1,0.4,0.1,0.4,0
+										c0-0.4,0.1-0.8,0.3-0.8c2.8,0.8,5.8,1.6,10.7,1.5c5.3-0.1,10.5-1.4,11.9-2.2c0.2-0.1,0.1,0.6,0.2,0.9c0,0.1,0.4,0.1,0.4,0
+										C-194.3,428.4-194.6,427.1-195.5,426.8z"/>
+									<path class="st3" d="M-208.2,435.2c-0.3,0.2,0.7,1.2,0.8,0.9c0.4-0.9,2.9-0.8,2.9-0.8S-206.1,434.1-208.2,435.2z"/>
+									<path class="st3" d="M-209.7,413.9c0.6-0.4,1.6-0.6,1.6-0.6l0.1-1.7c0,0-1.3,0.3-2.2,0.9c-0.9,0.6-1.2,1.9-1.2,1.9l0.7,0.5
+										C-210.8,415-210.2,414.2-209.7,413.9z"/>
+									<path class="st3" d="M-202.8,414.8c0.7,0.3,1.3,0.8,1.3,0.8l0.2-0.5c0,0-0.2-0.8-1.1-1.4c-0.6-0.4-1.7-0.6-1.7-0.6l-0.4,1.6
+										C-204.3,414.6-203.4,414.5-202.8,414.8z"/>
+									<path class="st3" d="M-209,418.4c-0.8,0-1.4,1.1-1.4,2.6c0,1.4,0.6,2.6,1.4,2.6c0.8,0,1.4-1.1,1.4-2.6
+										C-207.6,419.5-208.3,418.4-209,418.4z M-209.2,421.1c-0.3,0-0.6-0.5-0.6-1.1c0-0.6,0.3-1.1,0.6-1.1c0.3,0,0.6,0.5,0.6,1.1
+										C-208.6,420.6-208.9,421.1-209.2,421.1z"/>
+									<path class="st3" d="M-203.6,423.5c0.8,0,1.4-1.1,1.4-2.6c0-1.4-0.6-2.6-1.4-2.6c-0.8,0-1.4,1.1-1.4,2.6
+										C-205,422.4-204.4,423.5-203.6,423.5z M-203.8,418.9c0.3,0,0.6,0.5,0.6,1.1c0,0.6-0.3,1.1-0.6,1.1c-0.3,0-0.6-0.5-0.6-1.1
+										C-204.4,419.4-204.1,418.9-203.8,418.9z"/>
+									<path class="st3" d="M-188.1,434.7c-0.3-2.7-2.9-14.3-2.9-14.3s0.9-2.1,1.2-5.7c0.2-2.4-0.5-4.8-0.4-5c4.4-7.4-0.8-13.7-0.8-13.7
 										s-2.2,4.1-9.7,5c-4.9,0.6-13,1-19.5,3.8c-4.6,2-5.4,6.8-5.3,8.9c0.2,3.2,2.8,11.1,2.8,11.1s-1.7,7-2,9.5c-0.4,3.3,0.8,6.3,5.2,6.9
-										l-0.8,3.6h28.5l-0.9-3.6C35.7,44.3,37.8,43.5,37.4,38.7z M0.7,17.1c0.1-1.6,0.3-5,4.4-7.6c2.6-1.6,7.5-2.2,10.1-2.6
-										c3.4-0.6,10-1.2,13.3-2c4-1,6-3.7,6-3.7S34,4,32,5.1C27.1,7.6,21.8,7,16.3,7.8C9.2,8.8,4.6,10.6,3,13.5c-0.1,0.2-0.2,0.4-0.3,0.6
-										c0,0.1,0,0.1-0.1,0.2c-0.1,0.2-0.1,0.3-0.2,0.5c0,0.1,0,0.1-0.1,0.2c-0.1,0.2-0.1,0.5-0.2,0.8c0,0,0,0.1,0,0.1
-										c0,0.2-0.1,0.5-0.1,0.7c0,0.1,0,0.2,0,0.3c0,0.2,0,0.5,0,0.7c0,0.1,0,0.1,0,0.2c0,0.3,0,0.6,0,0.8c0,0,0,0.1,0,0.1
+										l-0.8,3.6h28.5l-0.9-3.6C-189.7,440.3-187.6,439.5-188.1,434.7z M-224.8,413.1c0.1-1.6,0.3-5,4.4-7.6c2.6-1.6,7.5-2.2,10.1-2.6
+										c3.4-0.6,10-1.2,13.3-2c4-1,6-3.7,6-3.7s-0.4,2.8-2.5,3.9c-4.9,2.6-10.2,1.9-15.7,2.7c-7.1,1-11.7,2.9-13.3,5.7
+										c-0.1,0.2-0.2,0.4-0.3,0.6c0,0.1,0,0.1-0.1,0.2c-0.1,0.2-0.1,0.3-0.2,0.5c0,0.1,0,0.1-0.1,0.2c-0.1,0.2-0.1,0.5-0.2,0.8
+										c0,0,0,0.1,0,0.1c0,0.2-0.1,0.5-0.1,0.7c0,0.1,0,0.2,0,0.3c0,0.2,0,0.5,0,0.7c0,0.1,0,0.1,0,0.2c0,0.3,0,0.6,0,0.8c0,0,0,0.1,0,0.1
 										c0,0.1,0,0.1,0,0.2c0,0.3,0,0.5,0,0.8c0,0.1,0,0.1,0,0.2c0,0.3,0,0.6,0.1,0.9c0,0.1,0,0.1,0,0.2c0,0.3,0,0.6,0.1,0.9c0,0,0,0,0,0.1
 										c0,0.3,0.1,0.6,0.1,0.9c0,0.1,0,0.1,0,0.2c0,0.3,0.1,0.6,0.1,0.9c0,0,0,0,0,0.1c0,0.3,0.1,0.5,0.1,0.8c0,0,0,0.1,0,0.1
 										c0,0.3,0.1,0.5,0.1,0.7c0,0,0,0.1,0,0.1c0,0.2,0.1,0.4,0.1,0.6c0,0,0,0,0,0.1c0,0.2,0.1,0.4,0.1,0.6c0,0,0,0.1,0,0.1
-										C3,27.1,3,27.3,3,27.4c0,0,0,0.1,0,0.1C3,27.5,0.6,19.7,0.7,17.1z M6.3,47.9l0.6-2.7c8.3,0.6,16.7,0.5,25.2-0.1l0.7,2.7H6.3z
-										 M31,44.7c-2.8,0.2-7.2,0.3-11.8,0.3h-0.1c-4.7,0-9-0.1-11.8-0.3c-6-0.4-6-4.4-5.7-5.8c1-5.7,1.6-6.2,4.3-22.8
-										c0.1-0.5,0.5-0.9,1.9-1c10.2-1.1,12.6-1.1,22.8,0c0.1,0,0.2,0,0.4,0c0.1,0,0.2,0,0.4,0.1c0,0,0,0,0,0c0.1,0,0.2,0,0.3,0.1
-										c0,0,0,0,0.1,0c0.1,0,0.1,0.1,0.2,0.1c0,0,0,0,0.1,0c0.1,0,0.1,0.1,0.2,0.1c0,0,0,0,0.1,0c0,0,0.1,0.1,0.1,0.1c0,0,0,0,0,0.1
-										c0,0,0.1,0.1,0.1,0.1c0,0,0,0.1,0,0.1c0,0,0,0.1,0,0.1c0,0.1,0,0.1,0,0.2c0.1,0.5,0.2,0.9,0.2,1.4c0,0.1,0,0.3,0.1,0.4
-										c0,0.3,0.1,0.6,0.1,0.9c0,0.2,0.1,0.4,0.1,0.6c0,0.2,0.1,0.4,0.1,0.6c0,0.2,0.1,0.4,0.1,0.6c0,0.2,0.1,0.3,0.1,0.5
-										c0.2,0.9,0.3,1.7,0.4,2.5c0,0,0,0,0,0c0.1,0.3,0.1,0.6,0.1,0.8c0,0,0,0,0,0c1.5,8.7,2.1,9.9,2.9,14.5C36.9,40.3,37,44.3,31,44.7z"
-										/>
+										c0,0.2,0.1,0.3,0.1,0.4c0,0,0,0.1,0,0.1C-222.4,423.5-224.9,415.7-224.8,413.1z M-219.2,443.9l0.6-2.7c8.3,0.6,16.7,0.5,25.2-0.1
+										l0.7,2.7H-219.2z M-194.5,440.7c-2.8,0.2-7.2,0.3-11.8,0.3h-0.1c-4.7,0-9-0.1-11.8-0.3c-6-0.4-6-4.4-5.7-5.8
+										c1-5.7,1.6-6.2,4.3-22.8c0.1-0.5,0.5-0.9,1.9-1c10.2-1.1,12.6-1.1,22.8,0c0.1,0,0.2,0,0.4,0c0.1,0,0.2,0,0.4,0.1c0,0,0,0,0,0
+										c0.1,0,0.2,0,0.3,0.1c0,0,0,0,0.1,0c0.1,0,0.1,0.1,0.2,0.1c0,0,0,0,0.1,0c0.1,0,0.1,0.1,0.2,0.1c0,0,0,0,0.1,0c0,0,0.1,0.1,0.1,0.1
+										c0,0,0,0,0,0.1c0,0,0.1,0.1,0.1,0.1c0,0,0,0.1,0,0.1c0,0,0,0.1,0,0.1c0,0.1,0,0.1,0,0.2c0.1,0.5,0.2,0.9,0.2,1.4
+										c0,0.1,0,0.3,0.1,0.4c0,0.3,0.1,0.6,0.1,0.9c0,0.2,0.1,0.4,0.1,0.6c0,0.2,0.1,0.4,0.1,0.6c0,0.2,0.1,0.4,0.1,0.6
+										c0,0.2,0.1,0.3,0.1,0.5c0.2,0.9,0.3,1.7,0.4,2.5c0,0,0,0,0,0c0.1,0.3,0.1,0.6,0.1,0.8c0,0,0,0,0,0c1.5,8.7,2.1,9.9,2.9,14.5
+										C-188.5,436.3-188.4,440.3-194.5,440.7z"/>
 								</g>
 							</svg>
 						</a>
@@ -199,7 +202,7 @@
 		</section>
 		<section class="content block-1" id="block1">
 			<div class="inner-background">
-				<video autoplay="autoplay">
+				<video autoplay="autoplay" loop>
 					<source src="assets/video/pixl.mp4" type='video/ogg; codecs="theora, vorbis"'>
 					<source src="assets/video/pixl.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 					<source src="assets/video/pixl.webm" type='video/webm; codecs="vp8, vorbis"'>
@@ -836,7 +839,7 @@
 													<label for="input3">Телефон</label>
 												</div>
 												<div class="col-xs-12">
-													<input type="text" name="phone" class="form-control my-input phone" placeholder="Введите ваш телефон" data-error="Введите корректный номер телефона" id="input3" required/>
+													<input type="tel" name="phone" class="form-control my-input phone" placeholder="Введите ваш телефон" data-error="Введите корректный номер телефона" id="input3" required/>
 												</div>
 												<div class="col-xs-12">
 													<div class="help-block with-errors"></div>
@@ -846,7 +849,7 @@
 										<div class="form-group">
 											<div class="row">
 												<div class="col-xs-12">
-													<button type="submit" class="btn btn-danger ghost-danger" value="block-1" name="from">Оставить заявку</button>
+													<button type="submit" class="btn btn-danger ghost-danger" value="block-1" name="from">Получить консультацию</button>
 												</div>
 											</div>
 										</div>
@@ -1069,7 +1072,7 @@
 											<label for="input1">Имя</label>
 										</div>
 										<div class="col-xs-12">
-											<input type="email" name="user" class="form-control my-input user" placeholder="Введите ваш email" id="input1"/>
+											<input type="email" name="user" class="form-control my-input user" placeholder="Введите ваше Имя" id="input1"/>
 										</div>
 										<div class="col-xs-12">
 											<div class="help-block with-errors"></div>
@@ -1095,7 +1098,7 @@
 											<label for="input3">Телефон</label>
 										</div>
 										<div class="col-xs-12">
-											<input type="text" name="phone" class="form-control my-input phone" placeholder="Введите ваш email" data-error="Введите корректный номер телефона" id="input3" required/>
+											<input type="tel" name="phone" class="form-control my-input phone" placeholder="Введите ваш номер телефона" data-error="Введите корректный номер телефона" id="input3" required/>
 										</div>
 										<div class="col-xs-12">
 											<div class="help-block with-errors"></div>
@@ -1108,7 +1111,7 @@
 											<label for="input3">Сообщение</label>
 										</div>
 										<div class="col-xs-12">
-											<textarea rows="5" type="text" name="phone" class="form-control my-input phone" placeholder="Введите ваш email" data-error="Введите корректный номер телефона" id="input3" ></textarea>
+											<textarea rows="5" type="text" name="phone" class="form-control my-input phone" placeholder="Введите ваше сообщение" data-error="Это поле должно быть заполнено" id="input3" ></textarea>
 										</div>
 										<div class="col-xs-12">
 											<div class="help-block with-errors"></div>
@@ -1118,7 +1121,7 @@
 								<div class="form-group">
 									<div class="row">
 										<div class="col-xs-12">
-											<button type="submit" class="btn btn-danger ghost-danger" value="block-1" name="from">Оставить заявку</button>
+											<button type="submit" class="btn btn-danger ghost-danger" value="block-1" name="from">Отправить</button>
 										</div>
 									</div>
 								</div>
@@ -1281,6 +1284,7 @@
 	</div>
 </div>
 	<script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.maskedinput.js"></script>
 	<!--<link href='assets/css/fontello.css' rel='stylesheet' type='text/css'>-->
 	<link href='assets/css/owl.carousel.css' rel='stylesheet' type='text/css'>
 	<!--<link href='assets/css/lightbox.css' rel='stylesheet' type='text/css'>-->
